# DesignPatterns

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: tests.yml
Tests/: test_expenses.cpp
include/: expenses.h
